# SVGF

./: .gitmodules  BuildDebug.bat  BuildRelease.bat  CMakeLists.txt  Clean.bat  README.md
cmake/: FindOptix.cmake
resources/: PathTraceCode.cpp  Save.cpp
resources/Gallery/: Credits.txt
resources/Scenes/: BaseScene
resources/ptx/: Closesthit.ptx  Miss.ptx  Raygen.ptx
resources/shaders/: GBuffer.frag  GBuffer.vert  Inputs.glsl  Macros.glsl  PathTrace.glsl  Structs.glsl  Tonemap.glsl
src/: App.cpp  App.cu  App.h  AssetLoader.cpp  AssetLoader.h  AssimpLoader.cpp  AssimpLoader.h  BVH.cpp  BVH.h  Buffer.cpp  Buffer.h  BufferCu.cu  BufferCu.cuh  BufferGL.cpp  BufferGL.h  CameraController.cpp  CameraController.h  Closesthit.cu  Common.cuh  CudaUtil.h  Filter.cuh  Framebuffer.cpp  Framebuffer.h  GLTFLoader.cpp  GLTFLoader.h  GLTexToCuBuffer.cu  GUI.cpp  GUI.h  ImageLoader.cpp  ImageLoader.h  Main.cpp  Miss.cu  PathTrace.cu  PathTrace.cuh  Raygen.cu  SVGF.cpp  SVGF.h  Scene.cpp  Scene.h  ShaderGL.cpp  (+14 more)
